# Persist

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLIPPY_DETECTION_FIX.md  CONTRIBUTING.md  CROSS_PLATFORM_BUILD_FIXES.md  Cargo.toml  DEVELOPMENT_SETUP.md  Makefile  PYTHON_MODULE_IMPORT_FIX.md  PYTHON_TEST_FIX.md  README.md  SCRIPT_ORGANIZATION.md  TESTING_IMPLEMENTATION_COMPLETE.md  build-and-test.sh  quick_test.sh  requirements-dev.txt  setup-dev-environment.ps1  setup-dev-environment.sh  setup-dev-tools  tarpaulin.toml  test-build-script-fix.sh  todo.md  validate-build-script.sh
.cargo/: config.toml
.github/workflows/: python-ci.yml  rust-ci.yml
docs/: Architecture.md  Configuration.md  Extension.md  ROADMAP_hardening_2025-Q3.md  Troubleshooting.md  observability.md  storage_backends.md
persist-cli/: Cargo.toml
persist-cli/src/: main.rs
persist-core/: Cargo.toml
persist-core/benches/: snapshot_benchmarks.rs
persist-core/examples/: simple_benchmark.rs
persist-core/src/: compression.rs  config.rs  error.rs  error_tests.rs  lib.rs  metadata.rs  metadata_tests.rs  observability.rs  snapshot.rs  snapshot_old.rs  storage.rs
persist-core/src/storage/: gcs.rs  local.rs  mod.rs  s3.rs  s3.rs.backup  s3_tests.rs
persist-python/: Cargo.toml  build.rs  persist.py  persist.pyi  pyproject.toml  pytest.ini
persist-python/src/: lib.rs  lib_broken.rs  lib_error.rs  lib_old.rs
persist-python/tests/: test_exceptions.py  test_python_sdk.py
persist-retry/: Cargo.toml
persist-retry/src/: lib.rs
persist_repo/: DEVELOPMENT.md  S3_STORAGE_IMPLEMENTATION.md  quick_ci_test.py  requirements-dev.txt  todo.md
persist_repo/persist-cli/src/: main.rs
persist_repo/persist-core/: Cargo.toml
persist_repo/persist-core/benches/: snapshot_benchmarks.rs
persist_repo/persist-core/examples/: simple_benchmark.rs
persist_repo/persist-core/src/: compression.rs  config.rs  error.rs  lib.rs  metadata.rs  observability.rs  snapshot.rs  snapshot_tests.rs  storage_tests.rs
persist_repo/persist-core/src/storage/: gcs.rs  local.rs  mod.rs  s3.rs
persist_repo/persist-core/src/tests/: mod.rs
persist_repo/persist-python/: Cargo.toml  README.md  persist.pyi  pyproject.toml
persist_repo/persist-python/src/: lib.rs
persist_repo/scripts/: format.sh
persist_repo/tests/: observability_tests.rs  test_integration.py  test_s3_integration.py
scripts/: build_all.sh  lint.sh  performance_analysis.py  run_comprehensive_tests.sh  test.sh
shell_output_save/: 2>_dev_null_1752225499.txt  monitor_1752225632_1752225642.txt  persist-core_1752225489.txt  timeout_1752225628.txt
tests/: end_to_end_tests.rs  localstack_integration.rs
