[workspace]
members = [
    "persist-core",
    "persist-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MiniMax Agent"]
license = "Proprietary"
repository = "https://github.com/xenoscale/Persist.git"
description = "Enterprise-grade agent snapshot and restore system"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
flate2 = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# PyO3 dependencies
pyo3 = "0.25.1"
pyo3-build-config = "0.25.1"
