[workspace]
members = [
    "persist-core",
    "persist-python", 
    "persist-cli",
    "persist-retry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MiniMax Agent"]
license = "Proprietary"
repository = "https://github.com/xenoscale/Persist.git"
description = "Enterprise-grade agent snapshot and restore system"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
flate2 = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.0"
bytes = "1.10.*"
rayon = "1.8"
backoff = { version = "0.4", features = ["tokio"] }
once_cell = "1.18.*"
num_cpus = "1.8.*"
futures = "0.3"
async-trait = "0.1"

# Async runtime dependencies
tokio = { version = "1.40.*", features = ["full"] }

# AWS SDK dependencies (patch-pinned)
aws-config = { version = "1.8.*" }
aws-sdk-s3 = { version = "1.96.*" }
aws-smithy-runtime-api = { version = "1.8.*" }

# Google Cloud Storage dependencies (patch-pinned)
google-cloud-storage = { version = "0.24.*" }
google-cloud-auth = { version = "0.16.*" }

# Observability dependencies
tracing = "0.1.*"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry dependencies temporarily disabled due to version conflicts
# tracing-opentelemetry = "0.20"
# opentelemetry = { version = "0.20", features = ["rt-tokio", "metrics"] }
# opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
# opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
prometheus = "0.14"

# PyO3 dependencies
pyo3 = "0.25.1"
pyo3-build-config = "0.25.1"

# CLI dependencies
clap = { version = "4.0", features = ["derive", "env"] }
tabled = "0.15"
anyhow = "1.0"
