[package]
name = "persist-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Persist agent snapshot system"

[features]
default = ["s3"]
s3 = ["persist-core/s3"]

[[bin]]
name = "persist"
path = "src/main.rs"

[dependencies]
persist-core = { path = "../persist-core", features = ["cli", "s3", "metrics"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1.0"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
