[package]
name = "persist-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for agent snapshot and restore functionality"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
flate2.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
# AWS SDK dependencies for S3 storage backend
aws-config = "1.1"
aws-sdk-s3 = "1.96"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"
