[package]
name = "persist-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for agent snapshot and restore functionality"

[features]
default = ["local"]
local = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-runtime-api", "async-rt"]
gcs = ["dep:google-cloud-storage", "dep:google-cloud-auth", "async-rt"]
async-rt = ["dep:tokio"]
metrics = ["dep:prometheus"]
cli = []

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
rayon = { workspace = true }
backoff = { workspace = true }
once_cell = { workspace = true }
num_cpus = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Async runtime (optional)
tokio = { workspace = true, optional = true }

# AWS SDK dependencies for S3 storage backend (optional)
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }

# Google Cloud Storage dependencies (optional)
google-cloud-storage = { workspace = true, optional = true }
google-cloud-auth = { workspace = true, optional = true }

# Retry logic
persist-retry = { path = "../persist-retry", features = ["async-rt"] }

# Observability dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# OpenTelemetry dependencies temporarily disabled due to version conflicts
# tracing-opentelemetry.workspace = true
# opentelemetry.workspace = true
# opentelemetry-jaeger.workspace = true
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"
rand = "0.8"

[[bench]]
name = "snapshot_benchmarks"
harness = false
