[package]
name = "persist-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the Persist agent snapshot system"
build = "build.rs"

[lib]
name = "persist"
crate-type = ["cdylib"]

[dependencies]
persist-core = { path = "../persist-core" }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38", "auto-initialize"] }
serde_json.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

# Ensure compatibility with various Python versions and platforms
[package.metadata.maturin]
python-source = "src"
module-name = "persist"
bindings = "pyo3"
# Cross-platform compatibility: support Linux, macOS (x86_64 and arm64), and Windows
compatibility = "universal2"
